[package]
name = "dropbox-content-hasher"
version = "0.3.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2018"
repository = "https://github.com/richo/dropbox-content-hasher"
license-file = "LICENSE"
description = """
A rust implemtnation of Dropbox's content_hash

Originally by the Dropbox team, extended and updated by Richo Healey
"""
exclude = ["test-data/*"]

[dependencies]
digest = "0.8.0"
sha2 = "0.8.0"
